fix header and footer, but scroll bar pushing content offcenter

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,23 @@
+html, body {
+  font-family: "Open Sans",sans-serif;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px 0 10px;
+}
+
 header {
+  flex: 0 0 auto;
+  border-style: solid;
+  border-width: 0px 0px 2.5px 0px;
+  border-color: black;
+  margin: 0 10px 0 10px;
+}
+
+main {
   flex: 1 1 auto;
+  position: relative;/* need this to position inner content */
+  overflow-y: auto;
 }
 
 .menu {
@@ -19,9 +37,7 @@ li {
   display: inline;
 }
 
-body {
-  font-family: "Open Sans",sans-serif;
-}
+
 
 .background {
   background-image: url("../img/desk_image.jpg");
@@ -36,9 +52,7 @@ body {
   justify-content: center;
   flex-direction: column;
   color: white;
-  border-style: solid;
-  border-width: 2.5px;
-  border-color: black;
+
 }
 .title{
   display: flex;
